# haskellBookExercises

./: .gitignore  README.md  arith3broken.hs  codeGeneration.hs  ex4.hs
chapter10_folding_lists/: database.hs  ex.hs
chapter11_algebraic_datatypes/: daPhone.hs  ex.hs  huttonsRazor.hs
chapter12_signalig_adversity/: ex.hs
chapter14_testing/addition/: addition.cabal
chapter14_testing/addition/src/: Addition.hs
chapter14_testing/morse/: morse.cabal
chapter14_testing/morse/src/: Main.hs  Morse.hs
chapter14_testing/morse/test/: tests.hs
chapter15_monoid_semigroup/: ex.hs
chapter15_monoid_semigroup/semigroupExercise/: semigroupExercise.cabal
chapter15_monoid_semigroup/semigroupExercise/app/: Main.hs  MainSemigroupOnly.hs
chapter16_functor/: ex.hs
chapter16_functor/functorExercise/: functorExercise.cabal
chapter16_functor/functorExercise/app/: Main.hs
chapter17_applicative/: ex.hs
chapter18_monad/: ex.hs
chapter19_applying_structure/shawty-prime/app/: Main.hs
chapter2/: chapter2.cabal
chapter2/app/: Main.hs
chapter2/src/: Learn.hs
chapter20_foldable/: ex.hs
chapter21_traversable/: ex.hs
chapter22_reader/: ReaderPractice.hs  ex.hs  ex2.hs  prettReader.hs
chapter23_state/: RandomExample.hs  RandomExample2.hs
chapter24_parser_combinators/parsingExercise/: parsingExercise.cabal
chapter24_parser_combinators/parsingExercise/app/: Main.hs
chapter24_parser_combinators/parsingExercise/src/: Ini.hs
chapter25_composing_types/: ex.hs
chapter26_monad_transformers/webApp/: webApp.cabal
chapter26_monad_transformers/webApp/app/: Main.hs
chapter27_non_strictness/: CoreDump.hs  ex1.hs
chapter28_basic_libraries/benchmark/: benchmark.cabal
chapter28_basic_libraries/benchmark/app/: Main.hs  Main_examples.hs
chapter29_io/: ex.hs
chapter3/: reverse.hs  thirdLetter.hs
chapter31_final_project/fingerd/: fingerd.cabal
chapter31_final_project/fingerd/src/: Debug.hs  Main.hs
chapter4/: mood.hs
chapter5_types/: fn.hs
chapter6/: ex6.hs  typeclass.hs
chapter7/: RegisteredUser.hs  ex.hs
chapter8_recursion/: ex1.hs  poemLines.hs  wordNumber.hs
chapter9_lists/: ex1.hs
hangman/: hangman.cabal
hangman/src/: Main.hs
haskellMOOC/parserCombinator/: JSONTypes.hs
