name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Please see README.md
homepage:            https://github.com/emres/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Emre Sevinc
maintainer:          emre.sevinc@gmail.com
copyright:           2016 Emre Sevinc
category:            Game
build-type:          Simple
extra-source-files:  data/dict.txt                  
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
