name:                addition
version:             0.1.0.0
synopsis:            Project to test addition functionality
description:         Please see README.md
homepage:            https://github.com/githubuser/addition#readme
license:             BSD3
license-file:        LICENSE
author:              Emre Sevinc
maintainer:          emre.sevinc@gmail.com
copyright:           2016 Emre Sevinc
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Addition
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       QuickCheck >= 2.8.1
                     , base >= 4.7 && < 5
                     , hspec
  hs-source-dirs:      src                     

-- executable addition
--   hs-source-dirs:      src
--   main-is:             Main.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
