name:                morse
version:             0.1.0.0
synopsis:            Morse code
description:         Please see README.md
homepage:            https://github.com/githubuser/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Emre Sevinc
maintainer:          emre.sevinc@gmail.com
copyright:           2016 Emre Sevinc
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Morse
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs

executable morse
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , morse
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       base
                     , containers
                     , morse
                     , QuickCheck
  ghc-options:         -Wall -fno-warn-orphans -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
