name:                parsingExercise
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/parsingExercise#readme
license:             BSD3
license-file:        LICENSE
author:              Emre Sevinc
maintainer:          emre.sevinc@gmail.com
copyright:           2016 Emre Sevinc
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.10.6.0,
                       containers >= 0.5.6.2,
                       hspec >= 2.2.3,
                       text >= 1.2.2.1,
                       trifecta == 1.5.2,
                       raw-strings-qq == 1.1
  default-language:    Haskell2010

executable parsingExercise-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >= 0.10.6.0
                     , containers >= 0.5.6.2
                     , hspec >= 2.2.3
                     , parsingExercise
                     , text >= 1.2.2.1
                     , trifecta == 1.5.2
  default-language:    Haskell2010

test-suite parsingExercise-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring >= 0.10.6.0
                     , containers >= 0.5.6.2
                     , hspec >= 2.2.3
                     , parsingExercise
                     , text >= 1.2.2.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/parsingExercise
