name:                benchmark
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/benchmark#readme
license:             BSD3
license-file:        LICENSE
author:              Emre Sevinc
maintainer:          emre.sevinc@gmail.com
copyright:           2016 Emre Sevinc
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , criterion >= 1.1.1.0
                     , containers >=  0.5.6.2
  default-language:    Haskell2010

executable benchmark-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , benchmark
                     , criterion >= 1.1.0
                     , containers >=  0.5.6.2
  ghc-options:         -O2
  default-language:    Haskell2010

test-suite benchmark-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , benchmark
                     , criterion >= 1.1.0
                     , containers >=  0.5.6.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/benchmark
