name:                fingerd
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Emre Sevinc
maintainer:          emre.sevinc@gmail.com
copyright:           2016 Emre Sevinc
category:            Internet
build-type:          Simple
cabal-version:       >=1.10

executable debug
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Debug.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , network
                     
executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , sqlite-simple
                     , text
